--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/view": "^6.0.3",
+    "@lezer/highlight": "^1.0.0",
+    "@uiw/codemirror-themes": "^4.11.4",
+    "@uiw/react-codemirror": "^4.11.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
